【機能追加】containerをmdに統一し、footerが常に下に来るよう修正。

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     </script>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header class="navbar navbar-dark bg-brand shadow-sm">
-        <div class="container">
+        <div class="container-md">
             <span class="navbar-brand fw-bold">ツール名</span>
             <span class="text-white-50 small ms-auto">by Rutile3</span>
         </div>
     </header>
 
-    <main class="container my-4">
+    <main class="flex-fill container-md my-4">
         <div class="row g-4">
             <div class="col-lg-6">
                 <div class="card shadow-sm">
@@ -46,7 +46,7 @@
     </main>
 
     <footer class="footer py-3 bg-brand text-white-50">
-        <div class="container small">
+        <div class="container-md small">
             <span>© 2025 Rutile3 | MIT License</span>
         </div>
     </footer>
