【機能追加】右上にアバターアイコンを表示し、ポートフォリオに遷移するようコードを追加。

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
 
 <body class="d-flex flex-column min-vh-100">
     <header class="navbar navbar-dark bg-brand shadow-sm">
-        <div class="container-md">
+        <div class="container-md d-flex align-items-center">
             <span class="navbar-brand fw-bold">ツール名</span>
-            <span class="text-white-50 small ms-auto">by Rutile3</span>
+            <a href="https://link-hub.rutile3.com/" target="_blank" class="d-flex align-items-center text-decoration-none ms-auto">
+                <span class="text-white-50 small ms-auto">by Rutile3</span>
+                <img src="avatar.png" alt="Avatar" class="avatar ms-2">
+            </a>
         </div>
     </header>
 
