【リファクタリング】フォーマット

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-501GNTE7BK"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-501GNTE7BK');
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-501GNTE7BK');
     </script>
 </head>
 
@@ -28,7 +28,8 @@
     <header class="navbar navbar-dark bg-brand shadow-sm">
         <div class="container-md d-flex align-items-center">
             <a href="" class="navbar-brand fw-bold">ツール名</a>
-            <a href="https://link-hub.rutile3.com/" target="_blank" class="d-flex align-items-center text-decoration-none ms-auto">
+            <a href="https://link-hub.rutile3.com/" target="_blank"
+                class="d-flex align-items-center text-decoration-none ms-auto">
                 <span class="text-white-50 small ms-auto">by Rutile3</span>
                 <img src="avatar.png" alt="Avatar" class="avatar ms-2">
             </a>
